# voice-memoir-agent

./: .gitignore  app.py  gpt_utils.py  memory_faiss.py  pyproject.toml  readme.md  requirements.txt  tts_utils.py  whisper_utils.py
local_audio/: test-voidc.m4a
