[tool.poetry]
name = "voice-memoir-agent"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
openai = "^1.93.0"
whisper = "^1.1.10"
faiss-cpu = "^1.11.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
