[tool.poetry]
name = "voice-memoir-agent"
version = "0.1.0"
description = ""
authors = ["leicheng"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = "^0.35.0"
fastapi = "^0.115.14"
openai = "^1.93.0"
whisper = "^1.1.10"
faiss-cpu = "^1.11.0"
tts = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
